{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 1,
  "lineage": "ab33c89f-2e29-830e-a206-75ed4ba7cdbe",
  "resources": [
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:security-group/sg-0653f5765512141a1",
            "description": "EKS cluster control plane security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.1.0/24",
                  "10.1.2.0/24",
                  "10.1.3.0/24",
                  "10.1.4.0/24",
                  "10.1.5.0/24",
                  "10.1.6.0/24",
                  "10.1.7.0/24",
                  "10.1.8.0/24"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0653f5765512141a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb98483d74c01187"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod020210527202310649300000001",
            "name_prefix": "prod0",
            "owner_id": "923799771136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod0-eks_cluster_sg"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "prod0-eks_cluster_sg",
              "Org": "withme",
              "Role": "automation"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:security-group/sg-0fb98483d74c01187",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow the cluster control plane to communicate with pods running extension API servers on port 443.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0653f5765512141a1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow the cluster control plane to communicate with worker Kubelet and pods.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0653f5765512141a1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0fb98483d74c01187",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0653f5765512141a1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0653f5765512141a1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "prod0-eks_cluster_nodes_sg",
            "name_prefix": "",
            "owner_id": "923799771136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod0-eks_cluster_nodes_sg"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "prod0-eks_cluster_nodes_sg",
              "Org": "withme",
              "Role": "automation"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.1.0/24",
              "10.1.2.0/24",
              "10.1.3.0/24",
              "10.1.4.0/24",
              "10.1.5.0/24",
              "10.1.6.0/24",
              "10.1.7.0/24",
              "10.1.8.0/24"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3993788115",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0653f5765512141a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc",
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_to_worker_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow the cluster control plane to communicate with pods running extension API servers on port 443.",
            "from_port": 443,
            "id": "sgrule-23990076",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb98483d74c01187",
            "self": false,
            "source_security_group_id": "sg-0653f5765512141a1",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.cluster",
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.nodes",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_workers_kubelet_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3211454422",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb98483d74c01187",
            "self": false,
            "source_security_group_id": "sg-0653f5765512141a1",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.cluster",
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.nodes",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_https_cluster_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-285565612",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb98483d74c01187",
            "self": false,
            "source_security_group_id": "sg-0653f5765512141a1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.cluster",
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.nodes",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_https_to_cluster_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server.",
            "from_port": 443,
            "id": "sgrule-1548267939",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0653f5765512141a1",
            "self": false,
            "source_security_group_id": "sg-0fb98483d74c01187",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.cluster",
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.nodes",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_to_cluster_kubelet_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow the cluster control plane to communicate with worker Kubelet and pods.",
            "from_port": 1025,
            "id": "sgrule-3212918740",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb98483d74c01187",
            "self": false,
            "source_security_group_id": "sg-0653f5765512141a1",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.cluster",
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.nodes",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.eks_targets[\"prod0\"].module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_to_workers_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow nodes to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-931466560",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fb98483d74c01187",
            "self": false,
            "source_security_group_id": "sg-0fb98483d74c01187",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.eks_targets.module.cluster.aws_security_group.nodes",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fda4c4354d5d3121",
            "domain": "vpc",
            "id": "eipalloc-0fb7d692312038300",
            "network_border_group": "us-west-2",
            "network_interface": "eni-030f31166fa0550da",
            "private_dns": "ip-10-1-0-76.us-west-2.compute.internal",
            "private_ip": "10.1.0.76",
            "public_dns": "ec2-52-12-148-198.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.148.198",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a242d1893b4016f3",
            "domain": "vpc",
            "id": "eipalloc-0e9bf54e8da055bae",
            "network_border_group": "us-west-2",
            "network_interface": "eni-075b4b19bb5c252f3",
            "private_dns": "ip-10-1-0-86.us-west-2.compute.internal",
            "private_ip": "10.1.0.86",
            "public_dns": "ec2-52-40-7-26.us-west-2.compute.amazonaws.com",
            "public_ip": "52.40.7.26",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d18caa89b89c1b65",
            "domain": "vpc",
            "id": "eipalloc-0e886bf05f6c21867",
            "network_border_group": "us-west-2",
            "network_interface": "eni-002cc34be6f966bbc",
            "private_dns": "ip-10-1-0-109.us-west-2.compute.internal",
            "private_ip": "10.1.0.109",
            "public_dns": "ec2-35-155-81-88.us-west-2.compute.amazonaws.com",
            "public_ip": "35.155.81.88",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04fd7d939f3d94086",
            "domain": "vpc",
            "id": "eipalloc-017e98cb128a97cd9",
            "network_border_group": "us-west-2",
            "network_interface": "eni-074ccd6a7179b43c7",
            "private_dns": "ip-10-1-0-119.us-west-2.compute.internal",
            "private_ip": "10.1.0.119",
            "public_dns": "ec2-44-242-10-62.us-west-2.compute.amazonaws.com",
            "public_ip": "44.242.10.62",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:internet-gateway/igw-026b38c97c5ef1e90",
            "id": "igw-026b38c97c5ef1e90",
            "owner_id": "923799771136",
            "tags": {
              "Name": "withme-services-prod-us-west-2-automation-default.igw"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default.igw",
              "Org": "withme",
              "Role": "automation"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "inet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb7d692312038300",
            "id": "nat-0b5ffa3a25dbda5bf",
            "network_interface_id": "eni-030f31166fa0550da",
            "private_ip": "10.1.0.76",
            "public_ip": "52.12.148.198",
            "subnet_id": "subnet-03482d8b0983921da",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            }
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9bf54e8da055bae",
            "id": "nat-00778a5b00e59e085",
            "network_interface_id": "eni-075b4b19bb5c252f3",
            "private_ip": "10.1.0.86",
            "public_ip": "52.40.7.26",
            "subnet_id": "subnet-0b957fb39da3c2c65",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            }
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e886bf05f6c21867",
            "id": "nat-0a19700658d3e9429",
            "network_interface_id": "eni-002cc34be6f966bbc",
            "private_ip": "10.1.0.109",
            "public_ip": "35.155.81.88",
            "subnet_id": "subnet-06cc7ed5107c4aa12",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            }
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc",
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.module.public.aws_subnet.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017e98cb128a97cd9",
            "id": "nat-0597ea2359cb40738",
            "network_interface_id": "eni-074ccd6a7179b43c7",
            "private_ip": "10.1.0.119",
            "public_ip": "44.242.10.62",
            "subnet_id": "subnet-083bcf5c7bdd3ee3b",
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            }
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:network-acl/acl-097ebc2435f739675",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-097ebc2435f739675",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "923799771136",
            "subnet_ids": [
              "subnet-00fd3fce1ae8be4f8",
              "subnet-033202facea3f869e",
              "subnet-03482d8b0983921da",
              "subnet-03be1455be32dc08c",
              "subnet-06cc7ed5107c4aa12",
              "subnet-078c9a276ceec5842",
              "subnet-083bcf5c7bdd3ee3b",
              "subnet-08f48e26b0fe2e910",
              "subnet-0a780172f7b511eec",
              "subnet-0b957fb39da3c2c65",
              "subnet-0c29a65ec572f5b00",
              "subnet-0cc4c5508f84ede4b",
              "subnet-0d1d9139d656137c8",
              "subnet-0d3fa250230936db5",
              "subnet-0d78209a874f26fec",
              "subnet-0dc02c49f183da9d5"
            ],
            "tags": {},
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Org": "withme",
              "Role": "automation"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.networking.module.private.aws_route_table_association.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.networking.module.public.aws_route_table_association.public",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_def_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-098405772830c18841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b5ffa3a25dbda5bf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098405772830c1884",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.aws_nat_gateway.inet_access",
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fd20bfee6f939f751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00778a5b00e59e085",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd20bfee6f939f75",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.aws_nat_gateway.inet_access",
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe0a3ea7ac0cfc421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a19700658d3e9429",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe0a3ea7ac0cfc42",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.aws_nat_gateway.inet_access",
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3e72ed1cc39bc0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0597ea2359cb40738",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3e72ed1cc39bc0d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_eip.nat",
            "module.vpcs.module.networking.aws_nat_gateway.inet_access",
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_def_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026b38c97c5ef1e90",
            "id": "r-rtb-001380c22edf8dec31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-001380c22edf8dec3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_internet_gateway.public",
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026b38c97c5ef1e90",
            "id": "r-rtb-07b1f2cd21129e75a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b1f2cd21129e75a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.vpc.aws_vpc.vpc",
            "module.vpcs.module.networking.aws_internet_gateway.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026b38c97c5ef1e90",
            "id": "r-rtb-021be82f6a684c1621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021be82f6a684c162",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_internet_gateway.public",
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026b38c97c5ef1e90",
            "id": "r-rtb-0e5cfb154b3cdbc231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5cfb154b3cdbc23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.networking.aws_internet_gateway.public",
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-098405772830c1884",
            "id": "rtb-098405772830c1884",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5ffa3a25dbda5bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2a",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2a.rtbl",
              "Tier": "private"
            },
            "tags_all": {
              "Az": "us-west-2a",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2a.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-0fd20bfee6f939f75",
            "id": "rtb-0fd20bfee6f939f75",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00778a5b00e59e085",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2b",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2b.rtbl",
              "Tier": "private"
            },
            "tags_all": {
              "Az": "us-west-2b",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2b.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-0fe0a3ea7ac0cfc42",
            "id": "rtb-0fe0a3ea7ac0cfc42",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a19700658d3e9429",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2c",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2c.rtbl",
              "Tier": "private"
            },
            "tags_all": {
              "Az": "us-west-2c",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2c.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-0f3e72ed1cc39bc0d",
            "id": "rtb-0f3e72ed1cc39bc0d",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0597ea2359cb40738",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2d",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2d.rtbl",
              "Tier": "private"
            },
            "tags_all": {
              "Az": "us-west-2d",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2d.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-001380c22edf8dec3",
            "id": "rtb-001380c22edf8dec3",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b38c97c5ef1e90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2a",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2a.rtbl",
              "Tier": "public"
            },
            "tags_all": {
              "Az": "us-west-2a",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2a.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-07b1f2cd21129e75a",
            "id": "rtb-07b1f2cd21129e75a",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b38c97c5ef1e90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2b",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2b.rtbl",
              "Tier": "public"
            },
            "tags_all": {
              "Az": "us-west-2b",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2b.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-021be82f6a684c162",
            "id": "rtb-021be82f6a684c162",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b38c97c5ef1e90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2c",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2c.rtbl",
              "Tier": "public"
            },
            "tags_all": {
              "Az": "us-west-2c",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2c.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:route-table/rtb-0e5cfb154b3cdbc23",
            "id": "rtb-0e5cfb154b3cdbc23",
            "owner_id": "923799771136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b38c97c5ef1e90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Az": "us-west-2d",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2d.rtbl",
              "Tier": "public"
            },
            "tags_all": {
              "Az": "us-west-2d",
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-us-west-2d.rtbl",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.private[\"eks_cp\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0121c94e18a200f17",
            "route_table_id": "rtb-098405772830c1884",
            "subnet_id": "subnet-0d3fa250230936db5"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05272f8f10d2129f4",
            "route_table_id": "rtb-0fd20bfee6f939f75",
            "subnet_id": "subnet-0d78209a874f26fec"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f9116b495ce8a25",
            "route_table_id": "rtb-0fe0a3ea7ac0cfc42",
            "subnet_id": "subnet-0cc4c5508f84ede4b"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e0e0af83c243e62",
            "route_table_id": "rtb-0f3e72ed1cc39bc0d",
            "subnet_id": "subnet-0d1d9139d656137c8"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.private[\"eks_cp\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0d3fa250230936db5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/28",
            "id": "subnet-0d3fa250230936db5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_cp0",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_cp0",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0d78209a874f26fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.16/28",
            "id": "subnet-0d78209a874f26fec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_cp1",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_cp1",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0cc4c5508f84ede4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.0.32/28",
            "id": "subnet-0cc4c5508f84ede4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_cp2",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_cp2",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0d1d9139d656137c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.1.0.48/28",
            "id": "subnet-0d1d9139d656137c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_cp3",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_cp3",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_cp"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.private[\"eks_nodes\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ab0fd37c6cc1cec",
            "route_table_id": "rtb-098405772830c1884",
            "subnet_id": "subnet-078c9a276ceec5842"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc",
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a79fe534cc129410",
            "route_table_id": "rtb-0fd20bfee6f939f75",
            "subnet_id": "subnet-0dc02c49f183da9d5"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6d18d2c6d0c6dc",
            "route_table_id": "rtb-0fe0a3ea7ac0cfc42",
            "subnet_id": "subnet-0a780172f7b511eec"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d79a29a3c708354",
            "route_table_id": "rtb-0f3e72ed1cc39bc0d",
            "subnet_id": "subnet-0c29a65ec572f5b00"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.private[\"eks_nodes\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-078c9a276ceec5842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-078c9a276ceec5842",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_nodes0",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_nodes0",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0dc02c49f183da9d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0dc02c49f183da9d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_nodes1",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_nodes1",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0a780172f7b511eec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0a780172f7b511eec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_nodes2",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_nodes2",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0c29a65ec572f5b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0c29a65ec572f5b00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "eks_nodes3",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "eks_nodes3",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "eks_nodes"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.private[\"rds\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eb070ca7c131d0f",
            "route_table_id": "rtb-098405772830c1884",
            "subnet_id": "subnet-03be1455be32dc08c"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b363bd7a216a6f",
            "route_table_id": "rtb-0fd20bfee6f939f75",
            "subnet_id": "subnet-08f48e26b0fe2e910"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0480c05cee7ab8a83",
            "route_table_id": "rtb-0fe0a3ea7ac0cfc42",
            "subnet_id": "subnet-00fd3fce1ae8be4f8"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e26692608a105d9",
            "route_table_id": "rtb-0f3e72ed1cc39bc0d",
            "subnet_id": "subnet-033202facea3f869e"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.private",
            "module.vpcs.module.networking.module.private.aws_subnet.private",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.private[\"rds\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-03be1455be32dc08c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.8.64/26",
            "id": "subnet-03be1455be32dc08c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "rds0",
              "Tier": "private",
              "Use": "rds"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "rds0",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "rds"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-08f48e26b0fe2e910",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.8.128/26",
            "id": "subnet-08f48e26b0fe2e910",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "rds1",
              "Tier": "private",
              "Use": "rds"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "rds1",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "rds"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-00fd3fce1ae8be4f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.8.192/26",
            "id": "subnet-00fd3fce1ae8be4f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "rds2",
              "Tier": "private",
              "Use": "rds"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "rds2",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "rds"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-033202facea3f869e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.1.9.0/26",
            "id": "subnet-033202facea3f869e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "rds3",
              "Tier": "private",
              "Use": "rds"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "rds3",
              "Org": "withme",
              "Role": "automation",
              "Tier": "private",
              "Use": "rds"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.public[\"nat_gw\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1cdac750d224b93",
            "route_table_id": "rtb-001380c22edf8dec3",
            "subnet_id": "subnet-03482d8b0983921da"
          },
          "dependencies": [
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc",
            "module.vpcs.module.networking.aws_route_table.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ea7827584209f9",
            "route_table_id": "rtb-07b1f2cd21129e75a",
            "subnet_id": "subnet-0b957fb39da3c2c65"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c08364b38b158a9a",
            "route_table_id": "rtb-021be82f6a684c162",
            "subnet_id": "subnet-06cc7ed5107c4aa12"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b0db73f4e0f2974",
            "route_table_id": "rtb-0e5cfb154b3cdbc23",
            "subnet_id": "subnet-083bcf5c7bdd3ee3b"
          },
          "dependencies": [
            "module.vpcs.module.networking.aws_route_table.public",
            "module.vpcs.module.networking.module.public.aws_subnet.public",
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.networking.module.public[\"nat_gw\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-03482d8b0983921da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.64/28",
            "id": "subnet-03482d8b0983921da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "nat_gw0",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "nat_gw0",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-0b957fb39da3c2c65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.80/28",
            "id": "subnet-0b957fb39da3c2c65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "nat_gw1",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "nat_gw1",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-06cc7ed5107c4aa12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.0.96/28",
            "id": "subnet-06cc7ed5107c4aa12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "nat_gw2",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "nat_gw2",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:subnet/subnet-083bcf5c7bdd3ee3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.1.0.112/28",
            "id": "subnet-083bcf5c7bdd3ee3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923799771136",
            "tags": {
              "Name": "nat_gw3",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "nat_gw3",
              "Org": "withme",
              "Role": "automation",
              "Tier": "public",
              "Use": "nat_gw"
            },
            "vpc_id": "vpc-08a9480ab9a90db12"
          },
          "dependencies": [
            "module.vpcs.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpcs[\"vpc0\"].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:923799771136:vpc/vpc-08a9480ab9a90db12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02cd746fdfa7f53e0",
            "default_route_table_id": "rtb-0299d3f282556234a",
            "default_security_group_id": "sg-0b666286bf22dbd58",
            "dhcp_options_id": "dopt-dc8aa6a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08a9480ab9a90db12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0299d3f282556234a",
            "owner_id": "923799771136",
            "tags": {
              "Name": "withme-services-prod-us-west-2-automation-default-vpc0"
            },
            "tags_all": {
              "Config": "default",
              "Dept": "services",
              "Environment": "prod",
              "GeneratedBy": "terraform",
              "Name": "withme-services-prod-us-west-2-automation-default-vpc0",
              "Org": "withme",
              "Role": "automation"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}